<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_page_header_title">Playlist maker</string>
    <string name="button_find">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="setting_screen_title">Настройки</string>
    <string name="find_screen_title">Поиск</string>
    <string name="find_hint">Поиск</string>
    <string name="setting_screen_dark_theme">Темная тема</string>
    <string name="setting_screen_share">Поделиться приложением</string>
    <string name="setting_screen_support">Написать в поддержку</string>
    <string name="setting_screen_terms">Пользовательское соглашение</string>
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="my_mail">avblago@yandex.ru</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="android_course_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="error">Проблема со связью \n \nЗагрузка не удалась. Проверте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_button">Очистить историю</string>
    <string name="player_trackTime_title">Длительность</string>
    <string name="player_collectionName_title">Альбом</string>
    <string name="player_year_title">Год</string>
    <string name="player_genre_title">Жанр</string>
    <string name="player_country_title">Страна</string>
    <string name="mediateka_screen_title">Медиатека</string>
    <string name="empty_mediateka">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="top_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
</resources>