<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue"
        android:paddingVertical="4dp"
        android:paddingLeft="4dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/blue"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:text="@string/main_page_header_title"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </FrameLayout>


    <Button
        android:id="@+id/button_find"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_find"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/find"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_media"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_sett"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button_settings"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/sett"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />


</LinearLayout>