<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/back_image"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:src="@drawable/light_mode" />

        <TextView
            android:layout_width="208dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_screen_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title_size" />


    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="21dp"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:text="@string/setting_screen_dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_start"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_end"
        android:paddingBottom="@dimen/padding_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/text_margin_end"
            android:text="@string/setting_screen_share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_start"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_end"
        android:paddingBottom="@dimen/padding_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/text_margin_end"
            android:text="@string/setting_screen_support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_start"
        android:paddingTop="@dimen/padding_top"
        android:paddingEnd="@dimen/padding_end"
        android:paddingBottom="@dimen/padding_bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/text_margin_end"
            android:text="@string/setting_screen_terms"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:src="@drawable/arrow_f" />

    </FrameLayout>


</LinearLayout>

