<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/player_border" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/player_border" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/backArrow"
        style="@style/HeaderBackIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/topBorder"
        tools:src="@drawable/cover_placeholder" />

    <TextView
        android:id="@+id/trackNameView"
        style="@style/PlayerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/trackCover"
        tools:text="Track" />

    <TextView
        android:id="@+id/artistNameView"
        style="@style/PlayerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/trackNameView"
        tools:text="Artist" />

    <ImageButton
        android:id="@+id/addToPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:src="@drawable/add_to_playlist"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artistNameView" />

    <ImageView
        android:id="@+id/playButton"
        style="@style/PlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@id/addToTopButton"
        app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
        app:layout_constraintTop_toBottomOf="@id/artistNameView" />

    <ImageButton
        android:id="@+id/addToTopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:background="@drawable/button_background"
        android:src="@drawable/add_to_top"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/artistNameView" />

    <TextView
        android:id="@+id/timerView"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="00:00"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/addToPlaylistButton" />


    <!-- 1) Длительность -->

    <TextView
        android:id="@+id/trackTimeMillsTitle"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_margin"
        android:layout_marginTop="40dp"
        android:text="@string/player_trackTime_title"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="trackTimeMillsTitleTag"
        app:layout_constraintTop_toBottomOf="@id/timerView" />

    <TextView
        android:id="@+id/trackTimeMillsView"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/player_margin"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/trackTimeMillsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="5:35" />

    <!-- 2) Альбом -->

    <TextView
        android:id="@+id/collectionNameTitle"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_margin"
        android:layout_marginTop="16dp"
        android:text="@string/player_collectionName_title"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="collectionNameTitleTag"
        app:layout_constraintTop_toBottomOf="@id/trackTimeMillsTitle" />

    <TextView
        android:id="@+id/collectionNameView"
        style="@style/PlayerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/player_margin"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/collectionNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/centerLine"
        tools:text="Альбом" />

    <!-- 3) Год -->

    <TextView
        android:id="@+id/yearTitle"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_margin"
        android:layout_marginTop="16dp"
        android:text="@string/player_year_title"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="yearTitleTag"
        app:layout_constraintTop_toBottomOf="@id/collectionNameTitle" />

    <TextView
        android:id="@+id/yearView"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/player_margin"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/yearTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2024" />

    <!-- 4) Жанр -->

    <TextView
        android:id="@+id/genreTitle"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_margin"
        android:layout_marginTop="16dp"
        android:text="@string/player_genre_title"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="genreTitleTag"
        app:layout_constraintTop_toBottomOf="@id/yearTitle" />

    <TextView
        android:id="@+id/genreView"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/player_margin"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/genreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="genre" />

    <!-- 5) Страна -->

    <TextView
        android:id="@+id/countryTitle"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/player_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/player_country_title"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="countryTitleTag"
        app:layout_constraintTop_toBottomOf="@id/genreTitle" />

    <TextView
        android:id="@+id/countryView"
        style="@style/PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/player_margin"
        android:gravity="end"
        app:layout_constraintBaseline_toBaselineOf="@id/countryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="country" />

</androidx.constraintlayout.widget.ConstraintLayout>